--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "web3 Enhancement Plugin",
   "author": "Web3Hook Web3Hook@outlook.coom",
   "scripts": {
-    "dev": "plasmo dev",
+    "dev": "plasmo dev --verbose",
     "build": "plasmo build",
     "package": "plasmo package"
   },
@@ -26,6 +26,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-virtual": "^3.13.12",
     "@web3icons/react": "^4.0.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
