--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tw3-track-extension",
   "displayName": "Tw3 Track Extension",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "web3 Enhancement Plugin",
   "author": "Web3Hook Web3Hook@outlook.coom",
   "scripts": {
@@ -17,6 +17,7 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-radio-group": "^1.3.7",
