--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tw3-track-extension",
   "displayName": "Tw3 Track Extension",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "web3 Enhancement Plugin",
   "author": "Web3Hook Web3Hook@outlook.coom",
   "scripts": {
@@ -31,10 +31,12 @@
     "@web3icons/react": "^4.0.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.523.0",
     "plasmo": "0.90.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.8.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1"
   },
